force-app/main/default/objects/District_Master_Data__c/District_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Master District</label>
    <nameField>
        <label>District Master Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master District</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>