force-app/main/default/objects/District_Master_Data__c/fields/city_code__c.field-meta.xml
<CustomField>
    <fullName>city_code__c</fullName>
    <label>city_code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>