force-app/main/default/objects/District_Master_Data__c/fields/Legal_Kecamatan_Formula__c.field-meta.xml
<CustomField>
    <fullName>Legal_Kecamatan_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Kecamatan</label>
    <type>Text</type>
</CustomField>