force-app/main/default/objects/District_Master_Data__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>