force-app/main/default/objects/District_Master_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>